CSD Update Broadcast CSS 10062015 - added margin to avoid overlap on ticker and number for no ads 4 layout

--- a/public/css/broadcast/default/broadcast.css
+++ b/public/css/broadcast/default/broadcast.css
@@ -304,7 +304,7 @@ body#broadcast .terminal {
 
 /*font sizes*/
 .onenum h1 { font-size: 280px; line-height: 320px; }
-.fournums h1 { font-size: 22vmin; margin-top: -40px!important; }
+.fournums h1 { font-size: 22vmin; margin-top: -75px!important; }
 .sixnums h1 { font-size: 18vmin; margin-top: -10px!important; }
 .sixnums .terminal { margin-top:0!important; margin-bottom: 0!important; line-height: 42px!important; height: 2em!important;}
 .ads-onenum h1 { font-size: 20vmin; }
